move simple.peer dependency

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
   <div id="app"></div>
+  <script src="simplepeer.min.js"></script>
   <script type="module" src="/src/application/application.ts"></script>
 </body>
 
